sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:7: error: Invalid literal number
  for (i<-1to N-1){
          ^AlgInsertionSort:7: error: illegal start of simple expression
  for (i<-1to N-1){
          ^AlgInsertionSort:20: error: ')' expected but '}' found.
} 
^