sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var i:Int=1
  var v:Int=0
  val N:Int=getNombreValeurs()
  var j:Int=0
  for (i<-1to N-1){
    v=getValeur(i)
    j=i-1
    while(!plusPetitQue(j,v) && j>0){
      copie(j,j+1)
      if(j>0){
        j=j-1
      }
      
    }
    setValeur(j+1,v)
    
  }
}